# bit-flip-py

./: .gitignore  pyproject.toml
news_fetch_api/: fetch_ticker.py  fetch_tickers.py  requirements.txt  testing.py  tiingo.py
py-kafka/1-kafka-cli/: 5-reset-offsets.sh
reddit/: constituents.csv  kafka-reddit-consumer.py  kafka-reddit-oath-producer.py  kafka-reddit-praw-producer.py  reddit.py  requirements.txt  testing.csv  testing.py  wallstreetbets.py
reddit/supabase/: db-schema-dump.py
