[project]
name = "bit-flip-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "quixstreams>=3.23.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "supabase>=2.22.0",
]
